fix scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@ body {
     @apply w-full h-full text-gray-100 relative;
     touch-action: manipulation;
     overscroll-behavior-y: contain;
+    height: 100vh;
+    height: 100dvh;
 }
 
 body {
